# Computer-Graphics

./: .gitignore  .gitmodules  ImageCompositor.py  PersonInserter.py  PersonInserter_README.md  PersonInserter_v2.py  PersonMetadataExtractor.py  pyproject.toml
envs/yolo/: README.md  pyproject.toml
person_metadata/: g1.json  p1.json  p2.json  p3.json
sam3_masks/: summary.json
sam3_masks/g1/: g1.json
sam3_masks/g2/: g2.json
sam3_masks/g3/: g3.json
sam3_masks/p1/: p1.json
sam3_masks/p2/: p2.json
sam3_masks/p3/: p3.json
scripts/: __init__.py  align_tone_hsv.py  compose_5.py  extract_metadata_from_sam3.py  generate_sam3_masks.py  generate_yolo_person_masks.py  smoke_test_inserter.py  test_all_combinations.py  zoom_into_patch.py
