[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-graphics-project"
version = "0.1.0"
description = "Computer graphics course project tools for image compositing and person mask extraction."
requires-python = ">=3.12,<3.14"
dependencies = [
    "einops>=0.7",
    "huggingface_hub[cli]>=0.31",
    "matplotlib>=3.8",
    "numpy>=1.26,<2",
    "pillow>=10",
    "psutil>=5.9",
    "pycocotools>=2.0.8",
    "scikit-image>=0.23",
    "scipy>=1.12",
    "setuptools>=69,<81",
    "torch==2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
sam3 = [
    "sam3",
]

[project.scripts]
generate-sam3-masks = "scripts.generate_sam3_masks:main"
align-tone-hsv = "scripts.align_tone_hsv:main"

[tool.setuptools]
py-modules = ["ImageCompositor", "PersonMetadataExtractor"]
packages = ["scripts"]

[tool.uv.sources]
# 需要使用sam3时取消注释
# sam3 = { path = "../sam3" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

# 普通 PyPI 包默认走清华镜像，包括 nvidia-*、numpy、scipy、pillow 等
[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

# 只让 torch / torchvision 走 PyTorch 官方 CUDA 12.8 源
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
